modernize mini kafka java models